# magic512bot

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  deployment.yml  mypy.ini  pyproject.toml
.buildkite/: build.sh  buildkite-deploy  pipeline-deploy.yml  pipeline.yml
card_lender/: api.py  db.py  dbutil.py  errors.py  main.py  models.py  util.py
magic512bot/: config.py  constants.py  database.py  db.py  errors.py  main.py  models.py  util.py
magic512bot/cogs/: card_lender.py  constants.py  nomination.py  nominations.py  role_request.py
magic512bot/cogs/card_lender/: card_lender.py
magic512bot/cogs/role_request/: role_request.py  sweat.py
magic512bot/models/: CardLoan.py  User.py  __init__.py  card_lender.py  cardloan.py  nomination.py  nominations.py  role_request.py  task_run.py  user.py
magic512bot/services/: card_lender.py  nomination.py  nominations.py  role_request.py  task_run.py
tests/: conftest.py  test_card_lender.py  test_card_lender_service.py  test_database.py  test_nominations_cog.py  test_nominations_model.py  test_nominations_service.py  test_role_request.py  test_role_request_service.py  test_task_run.py  utils.py
