[tool.poetry]
name = "magic512bot"
version = "0.1.0"
description = ""
authors = ["bassmatt <bassmatt0515@gmail.com>"]
readme = "README.md"
packages = [{include = "magic512bot"}]

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.4.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.32"
pytest = "^8.3.2"
requests = "^2.32.3"
table2ascii = "^1.1.3"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^25.1.0"
autopep8 = "^2.3.2"
isort = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
max_line_length = 88
aggressive = 3
in-place = true
recursive = true

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88