[project]
name = "magic512bot"
version = "0.1.0"
description = ""
authors = [
    {name = "bassmatt", email = "bassmatt0515@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "discord-py>=2.4.0",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.32",
    "pytest>=8.3.2",
    "requests>=2.32.3",
    "table2ascii>=1.1.3",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy-utils>=0.41.2",
    "ruff>=0.3.3",
    "mypy>=1.15.0",
    "pytest-asyncio>=0.25.3",
    "types-sqlalchemy>=1.4.53.38",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP", "PL", "RUF"]
ignore = ["PLR0913"]  # Ignore too many arguments for now

[tool.ruff.lint.isort]
known-first-party = ["magic512bot"]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # Use of assert detected
    "ARG001",  # Unused function argument
    "PLR2004", # Magic value used in comparison
    "E501",    # Line too long
    "F811",    # Redefinition of unused name
    "F401",    # Imported but unused
    "D103",    # Missing docstring in public function
    "PLR0913", # Too many arguments
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

# Ignore missing imports for third-party libraries
[[tool.mypy.overrides]]
module = [
    "pytest.*",
    "sqlalchemy.*",
]
ignore_missing_imports = true
